# gall

./: Cargo.toml  example.gall
libs/arborist/: Cargo.toml
libs/arborist/src/: lib.rs
libs/compiler/: Cargo.toml
libs/compiler/src/: lib.rs
libs/lexer/: Cargo.toml
libs/lexer/src/: lib.rs
libs/parser/: Cargo.toml
libs/parser/src/: lib.rs
libs/symbolize/: Cargo.toml
libs/symbolize/src/: lib.rs
src/: main.rs  meow.rs
